# standard-pkg_resources

./: .gitignore  README.rst  conftest.py  pyproject.toml  tox.ini
